Thermometer overflow CSS fix

--- a/pledgetovote/static/pledgetovote/sass/dashboard.sass
+++ b/pledgetovote/static/pledgetovote/sass/dashboard.sass
@@ -4,6 +4,7 @@
     .pledge-data, .one-on-one-data
         display: flex
         align-items: center
+        justify-content: space-around
 
     .dashboard-title
         text-align: center
