--- a/pledgetovote/static/pledgetovote/sass/thermometer.sass
+++ b/pledgetovote/static/pledgetovote/sass/thermometer.sass
@@ -1,14 +1,14 @@
 @import "./base_template.sass"
 
 $therm-width: 150px
-$therm-height: 400px
+$therm-height: 350px
 
 .thermometer-container
-    height: $therm-height
     display: flex
     flex-direction: column
 
     .thermometer-inner-container
+        height: $therm-height
         display: flex
         flex-direction: row
 
